<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ginanjar"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_saya"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="2dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:id="@+id/btn_reset_password"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:id="@+id/btn_logout"
        android:textColor="@color/white"/>

</LinearLayout>